--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,5 +6,8 @@
 }
 
 body{
-  background: #333;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+        url(./assets/Home.jpg)
+        no-repeat center fixed;
+        background-size: cover;
 }
